--- a/styles.css
+++ b/styles.css
@@ -227,7 +227,9 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 60px 20px;
+    padding: 0px 20px;
+    padding-top: 60px;
+    padding-bottom: 100px;
 }
 
 .glass-container {
